<resources>
    <string name="app_name">PunxMusic</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PunxMusic">PunxMusic</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_search">Search</string>
    <string name="home">Home</string>
    <string name="categoria">Categoría</string>
    <string name="noticias">Noticias</string>
    <string name="nuevos_instrumentos">Nuevos Instrumentos</string>
    <string name="mas_populares">Más populares</string>
    <string name="fender_instrumentos">fender instrumentos</string>
    <string name="conciertos">Concierto en vivo</string>
    <string name="txt_img_instrumento">Foto del instrumento</string>
    <string name="shopping_cart">Carrito de compras</string>
    <string name="action_shopping_cart">Ver carrito de compras</string>
    <string name="txt_video">Video</string>
    <string name="txt_add_to_cart">Agregar al carrito</string>
    <string name="txt_fav">fav</string>
    <string name="txt_instrumento">Instrumentos</string>
    <string name="txt_guitarra_electricas">Guitarras Eléctricas</string>
    <string name="txt_guitarra_acustica">Guitarras Acustica</string>
    <string name="txt_bajo_electricas">Bajo Eléctricas</string>
    <string name="txt_baterias">Baterias</string>

    <string name="txt_name_instrumento_example">Lorem ipsum dolor sit amet</string>
    <string name="txt_model_instrumento_example">N.º de modelo: 0321222523</string>
    <string name="txt_precio_instrumento_example">$15000</string>
    <string name="txt_button_ver">Ver</string>
    <string name="txt_button_remover">Remover</string>
    <string name="txt_realizar_pago">Realizar el pago</string>
</resources>
