<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_shopping_cart"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardview_shopping_cart_height"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:weightSum="10"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_instrument_shopping_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/component_space_right_small"
        android:layout_weight="7"
        android:background="@color/guitar_background"
        android:contentDescription="@string/txt_img_instrumento" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_gravity="center"
        app:columnCount="2"
        app:useDefaultMargins="true">

        <TextView
            android:id="@+id/txt_name_instrument_shopping_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_name_instrumento_example"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/txt_body2_menu_size"
            android:fontFamily="@font/rubik_regular"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_columnSpan="2"/>

        <TextView
            android:id="@+id/txt_model_instrument_shopping_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_model_instrumento_example"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/txt_caption_size"
            android:fontFamily="@font/rubik_regular"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_columnSpan="2"/>

        <TextView
            android:id="@+id/txt_precio_instrument_shopping_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_precio_instrumento_example"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/txt_body1_size"
            android:fontFamily="@font/rubik_medium"
            app:layout_columnSpan="2"/>

        <Button
            android:id="@+id/button_ver_instrumento_cart"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:text="@string/txt_button_ver"
            android:textColor="@color/primaryTextColor"
            android:textAllCaps="false"
            android:textSize="@dimen/txt_body2_menu_size"
            android:fontFamily="@font/rubik_medium"
            android:background="@drawable/button_border_grey"
            app:layout_columnSpan="1"
            app:layout_columnWeight="4"/>

        <Button
            android:id="@+id/button_remover_instrumento_cart"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:text="@string/txt_button_remover"
            android:textColor="@color/primaryTextColor"
            android:textAllCaps="false"
            android:textSize="@dimen/txt_body2_menu_size"
            android:fontFamily="@font/rubik_medium"
            android:background="@drawable/button_border_grey"
            android:backgroundTint="#EAEAEB"
            app:layout_columnSpan="1"
            app:layout_columnWeight="6" />

    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>