<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    tools:context=".Novedades">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="2"
        app:useDefaultMargins="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_nuevos_instrumentos"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/component_space_bottom_medium"
            app:cardCornerRadius="@dimen/cardview_corner"
            app:cardPreventCornerOverlap="true"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardElevation="2dp"
            app:layout_columnSpan="2">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/nuevos_instrumentos_cardview"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/nuevos_instrumentos"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:alpha="0.2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="16dp"
                    android:text="@string/nuevos_instrumentos"
                    android:textColor="@color/lightTextColor"
                    android:textSize="40sp"
                    android:fontFamily="@font/rubik_bold" />
            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mas_populares"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/component_space_bottom_small"
            android:textSize="@dimen/txt_title_size"
            android:textColor="@color/primaryTextColor"
            android:fontFamily="@font/rubik_bold"
            app:layout_columnSpan="2"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/component_space_bottom_small"
            app:layout_columnSpan="2">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <include layout="@layout/cardview_shimmer_load"/>
                    <include layout="@layout/cardview_shimmer_load"/>
                    <include layout="@layout/cardview_shimmer_load"/>
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_productos_populares"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </FrameLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_fender_instruments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            app:cardCornerRadius="@dimen/cardview_corner"
            app:cardPreventCornerOverlap="true"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/fender_instrumentos_cardview"
                android:contentDescription="@string/fender_instrumentos"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_tutoriales"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/component_space_bottom_medium"
            app:cardCornerRadius="@dimen/cardview_corner"
            app:cardPreventCornerOverlap="true"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/tutorial_cardview"
                android:contentDescription="@string/fender_instrumentos"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mas_populares"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/component_space_bottom_small"
            android:textSize="@dimen/txt_title_size"
            android:textColor="@color/primaryTextColor"
            android:fontFamily="@font/rubik_bold"
            app:layout_columnSpan="2"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_conciertos"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/component_space_bottom_large"
            app:cardCornerRadius="@dimen/cardview_corner"
            app:cardPreventCornerOverlap="true"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardElevation="2dp"
            app:layout_columnSpan="2">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/conciertos_cardview"
                    android:contentDescription="@string/conciertos" />
            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </androidx.gridlayout.widget.GridLayout>

</androidx.core.widget.NestedScrollView>